2004-12-22  Damien Sandras  <dsandras@gnome.org>

	* help/C/gnomemeeting-C.omf help/fr/gnomemeeting-fr.omf: Fixed
	relation serie id thanks to SUN (Maeve Anslow) and Christopher Warner. 

2004-12-13 Kilian Krause <kk@verfaction.de>

	* lib/gtk-text-tag-addon.h, lib/gtk-text-buffer-addon.c: Fixed
	compilation on FreeBSD. Fix by Roger Hardiman <roger@freebsd.org>.
	Thanks!

2004-12-06  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, lib/contacts/gm_contacts-ldap.cpp:
	Fixed warnings, thanks Kilian!

2004-12-05  Damien Sandras  <dsandras@gnome.org>
	
	* configure.in: 1.2 release guys and gals!
	
2004-12-02  Damien Sandras  <dsandras@gnome.org>

	* Makefile.am: Fixed EXTRA_DIST to contain the list of marshallers.

	* lib/contacts/Makefile.am: Fixed it so that make dist contains
	gm_contacts-zeroconf.h.

	* src/tools.cpp: Do not first "alias as primary alias" when
	registering to the PC 2 Phone gk.

2004-11-26  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Do not add the gateway IP in the URL if it is
	already there. Thanks Kilian !
	
2004-11-25  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Moved the URL column as requested by
	several persons.

2004-11-25  Damien Sandras  <dsandras@gnome.org>

	* src/gdkvideoio.cpp: Same here for the zoom value.

2004-11-25  Damien Sandras  <dsandras@gnome.org>

	* src/endpoint.cpp: Added boundary checks for the lost and late
	percentages.

2004-11-22  Damien Sandras  <dsandras@gnome.org>

	* help/fr/gnomemeeting-fr.omf: Converted to UTF-8.

2004-11-22  Damien Sandras  <dsandras@gnome.org>

	* help/fr/gnomemeeting-fr.omf, help/fr/gnomemeeting.xml,
	help/fr/figures/audio_codecs.png, help/fr/figures/call_d1.png,
	help/fr/figures/config_d1.png, help/fr/figures/config_d10.png,
	help/fr/figures/config_d2.png, help/fr/figures/config_d3.png,
	help/fr/figures/config_d4.png, help/fr/figures/config_d5.png,
	help/fr/figures/config_d6.png, help/fr/figures/config_d7.png,