@@ -146,6 +146,8 @@ gm_history_window_new ()
 				      "current-position", &end, FALSE);
 
   scr = gtk_scrolled_window_new (NULL, NULL);
+  gtk_scrolled_window_set_shadow_type (GTK_SCROLLED_WINDOW (scr), 
+				       GTK_SHADOW_IN);
   gtk_container_set_border_width (GTK_CONTAINER (scr), 6);
   
   gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (scr),
