@@ -1,5 +1,10 @@
 2004-12-22  Damien Sandras  <dsandras@gnome.org>
 
+	* src/log_window.cpp, src/main_window.cpp: Applied UI fixes provided
+	by Eskil Bylund <eskil_bylund@fastmail.fm>.
+
+2004-12-22  Damien Sandras  <dsandras@gnome.org>
+
 	* help/C/gnomemeeting-C.omf help/fr/gnomemeeting-fr.omf: Fixed
 	relation serie id thanks to SUN (Maeve Anslow) and Christopher Warner. 
 
